--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "express-routes-viewer",
   "displayName": "express routes viewer",
   "description": "see all your routes in your express app",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/OlivierFortier/express-routes-viewer"
