chore: update publisher name format in package.json

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "url": "https://github.com/OlivierFortier"
     }
   ],
-  "publisher": "OlivierFortier",
+  "publisher": "Olivier-Fortier",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.97.0"
