--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "url": "https://github.com/OlivierFortier"
   },
   "contributors": [
-    {"name": "OlivierFortier", "url": "https://github.com/OlivierFortier"}
+    {
+      "name": "OlivierFortier",
+      "url": "https://github.com/OlivierFortier"
+    }
   ],
   "extensionKind": [
     "workspace",
@@ -39,17 +42,17 @@
     }
   ],
   "publisher": "Olivier-Fortier",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.97.0"
   },
   "categories": [
-    "Other"
+    "Other",
+    "Visualization",
+    "Debuggers",
+    "Testing"
   ],
-  "activationEvents": [
-    "onCommand:extension.showExpressRoutes"
-  ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension",
   "contributes": {
     "viewsContainers": {
       "activitybar": [
@@ -132,12 +135,19 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
+    "vscode:prepublish": "npm run package",
+    "compile": "npm run check-types && node esbuild.js",
+    "watch": "npm-run-all -p watch:*",
+    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+    "watch:esbuild": "node esbuild.js --watch",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "check-types": "tsc --noEmit",
+    "package": "npm run check-types && node esbuild.js --production"
+  },
+  "dependencies": {
+    "glob": "^8.1.0"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
@@ -148,8 +158,9 @@
     "@typescript-eslint/parser": "^8.22.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
+    "esbuild": "^0.25.0",
     "eslint": "^9.19.0",
-    "glob": "^8.1.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.7.3"
   }
 }
