feat: update README for logo display and add icon path in package.json

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   ],
   "publisher": "Olivier-Fortier",
   "version": "0.0.3",
+  "icon": "media/express-routes-viewer.png",
   "engines": {
     "vscode": "^1.97.0"
   },
